force-app/main/default/objects/Partnership_Request__c/Partnership_Request__c.object-meta.xml
<CustomObject>
    <description>This objects gathers input from interested home owners that want the leasing company to manage their home rental properties</description>
    <label>Partnership Request</label>
    <nameField>
        <label>Partnership Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partnership Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>