force-app/main/default/objects/Partnership_Request__c/fields/Build_Status__c.field-meta.xml
<CustomField>
    <fullName>Build_Status__c</fullName>
    <label>Build Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Construction</fullName>
            </value>
            <value>
                <fullName>Re-Modeled</fullName>
            </value>
            <value>
                <fullName>Original with Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>