force-app/main/default/objects/Partnership_Request__c/fields/Years_Owned__c.field-meta.xml
<CustomField>
    <fullName>Years_Owned__c</fullName>
    <label>Years Owned</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>