force-app/main/default/objects/Partnership_Request__c/validationRules/Phone_Number_Not_10_dig.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Not_10_dig</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Phone_Number__c,&quot;\\d{10}&quot;))</errorConditionFormula>
    <errorMessage>Phone number must be 10 digits long</errorMessage>
</ValidationRule>