force-app/main/default/objects/Partnership_Request__c/validationRules/Valid_Zip.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Zip</fullName>
    <active>true</active>
    <errorConditionFormula>OR(NOT(ISNUMBER( Zip_Code__c  )),
     NOT(REGEX( Zip_Code__c, &quot;\\d{5}(-\\d{4})?&quot;)),
     NOT(REGEX( Zip_Code__c , &quot;\\d{5}&quot;)) 
   )</errorConditionFormula>
    <errorMessage>Zip Code must be in correct format. ex 99999 or 99999-9999. And must be in number format</errorMessage>
</ValidationRule>