force-app/main/default/objects/Partnership_Request__c/validationRules/Year_Built_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_Built_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Year_Built__c &lt; 1800,  Year_Built__c &gt; 2021



)</errorConditionFormula>
    <errorMessage>Year must be greater than 1800 and can not be greater than current year</errorMessage>
</ValidationRule>